--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,16 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "node-sass": "^4.14.1",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.6.10",
+    "vue-cookies": "^1.7.4",
+    "vue-fullpage.js": "^0.1.6",
     "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.0.7",
     "vuetify": "^2.0.0",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "vuex-persistedstate": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
