--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,82 +1,12 @@
-argon2-cffi==20.1.0
-attrs==20.2.0
-backcall==0.2.0
-beautifulsoup4==4.9.1
-bleach==3.1.5
-branca==0.3.1
-certifi==2019.11.28
-cffi==1.14.2
-chardet==3.0.4
-colorama==0.4.3
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
-Django==2.2.7
-django-allauth==0.42.0
-django-cors-headers==3.5.0
-djangorestframework==3.10.3
-entrypoints==0.3
-folium==0.10.1
-html5lib==1.1
-idna==2.8
-importlib-metadata==1.7.0
-ipykernel==5.3.4
-ipython==7.16.1
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-jedi==0.17.2
-Jinja2==2.10.3
-joblib==0.14.0
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.7
-jupyter-console==6.2.0
-jupyter-core==4.6.3
-kiwisolver==1.1.0
-lxml==4.5.2
-MarkupSafe==1.1.1
-matplotlib==3.1.2
-mistune==0.8.4
-nbconvert==5.6.1
-nbformat==5.0.7
-notebook==6.1.3
-numpy==1.17.3
-oauthlib==3.1.0
-packaging==20.4
-pandas==0.25.3
-pandocfilters==1.4.2
-parso==0.7.1
-pickleshare==0.7.5
-prometheus-client==0.8.0
-prompt-toolkit==3.0.7
-pycparser==2.20
-Pygments==2.6.1
-pyparsing==2.4.5
-pyrsistent==0.16.0
-python-dateutil==2.8.1
-python3-openid==3.2.0
-pytz==2019.3
-pywin32==228
-pywinpty==0.5.7
-pyzmq==19.0.2
-qtconsole==4.7.7
-QtPy==1.9.0
-requests==2.22.0
-requests-oauthlib==1.3.0
-scikit-learn==0.21.3
-scipy==1.3.1
-seaborn==0.9.0
-Send2Trash==1.5.0
-six==1.13.0
-soupsieve==2.0.1
-sqlparse==0.3.0
-tabulate==0.8.7
-terminado==0.8.3
-testpath==0.4.4
-tornado==6.0.4
-traitlets==4.3.3
-urllib3==1.25.7
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-zipp==3.1.0
+Django
+djangorestframework
+joblib
+numpy
+pytz
+scipy
+sqlparse
+pandas
+django-rest-auth
+django-allauth
+djangorestframework-jwt
+django-cors-headers
