--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "vue-chartjs": "3.5.0",
     "vue-clipboard2": "0.3.1",
     "vue-flatpickr-component": "8.1.5",
+    "vue-google-signin-button": "^1.0.4",
     "vue-router": "3.3.4",
     "vue2-transitions": "0.3.0"
   },
