--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "vue-flatpickr-component": "8.1.5",
     "vue-google-signin-button": "^1.0.4",
     "vue-router": "3.3.4",
-    "vue2-transitions": "0.3.0"
+    "vue2-transitions": "0.3.0",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.6",
