--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,27 +1,26 @@
 asgiref==3.2.10
-astroid==2.4.2
+beautifulsoup4==4.9.1
+bs4==0.0.1
 certifi==2020.6.20
 chardet==3.0.4
-colorama==0.4.3
+dataclasses==0.7
 defusedxml==0.6.0
-Django==3.1.1
+Django==3.0.5
 django-allauth==0.42.0
 django-cors-headers==3.5.0
 django-rest-auth==0.9.5
+django-rest-framework-mongoengine==3.4.1
 djangorestframework==3.11.1
 djangorestframework-jwt==1.11.0
+djongo==1.3.3
 idna==2.10
-isort==5.5.2
 joblib==0.16.0
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
+mongoengine==0.20.0
 numpy==1.19.2
 oauthlib==3.1.0
 pandas==1.1.2
 PyJWT==1.7.1
-pylint==2.6.0
-pylint-django==2.3.0
-pylint-plugin-utils==0.6
+pymongo==3.11.0
 python-dateutil==2.8.1
 python3-openid==3.2.0
 pytz==2020.1
@@ -29,9 +28,6 @@ requests==2.24.0
 requests-oauthlib==1.3.0
 scipy==1.5.2
 six==1.15.0
-sqlparse==0.3.1
-toml==0.10.1
-typed-ast==1.4.1
+soupsieve==2.0.1
+sqlparse==0.2.4
 urllib3==1.25.10
-wrapt==1.12.1
-djongo
