--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,9 @@
     "@syncfusion/ej2-vue-charts": "^18.2.58",
     "axios": "^0.20.0",
     "core-js": "^3.6.2",
+    "tiptap": "^1.30.0",
+    "tiptap-extensions": "^1.33.0",
+    "tiptap-vuetify": "^2.24.0",
     "v-autocomplete": "^1.8.2",
     "vue": "^2.6.11",
     "vue-google-signin-button": "^1.0.4",
