--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ defusedxml==0.6.0
 Django==3.0.5
 django-allauth==0.42.0
 django-cors-headers==3.5.0
+django-redis==4.12.1
 django-rest-auth==0.9.5
 django-rest-framework-mongoengine==3.4.1
 djangorestframework==3.11.1
@@ -18,6 +19,7 @@ idna==2.10
 isort==5.5.2
 joblib==0.16.0
 lazy-object-proxy==1.4.3
+lxml==4.5.2
 mccabe==0.6.1
 mongoengine==0.20.0
 numpy==1.19.2
@@ -31,12 +33,14 @@ pymongo==3.11.0
 python-dateutil==2.8.1
 python3-openid==3.2.0
 pytz==2020.1
+redis==3.5.3
 requests==2.24.0
 requests-oauthlib==1.3.0
 scipy==1.5.2
 six==1.15.0
 soupsieve==2.0.1
 sqlparse==0.2.4
+tabulate==0.8.7
 toml==0.10.1
 typed-ast==1.4.1
 urllib3==1.25.10
